Initial architecture model

--- a/plugins/org.eclipse.papyrus.umllight.core/build.properties
+++ b/plugins/org.eclipse.papyrus.umllight.core/build.properties
@@ -1,4 +1,8 @@
 source.. = src/
 output.. = target/classes
 bin.includes = META-INF/,\
-               .
+               .,\
+               resource/,\
+               plugin.xml,\
+               icons/
+src.includes = resource/
