Issue #7 Package Diagram
- UML Light Package Diagram
- initial draft of New Child and New Relationship menus

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
+++ b/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
@@ -7,5 +7,13 @@
             path="resource/architecture/UMLLight.architecture">
       </model>
    </extension>
-
+   <extension
+         point="org.eclipse.papyrus.infra.newchild">
+      <menuCreationModel
+            model="resource/creationmenu/UMLLightNewChild.creationmenumodel">
+      </menuCreationModel>
+      <menuCreationModel
+            model="resource/creationmenu/UMLLightNewRelationship.creationmenumodel">
+      </menuCreationModel>
+   </extension>
 </plugin>
