Fix #2 UI simplification
- filter some action-set and context-menu contributions
- define capabilities to hide advanced functionality
- provide Capabilities preference page for user control

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<inceptionYear>2018</inceptionYear>
 	<modules>
 		<module>plugins/org.eclipse.papyrus.umllight.core</module>
+		<module>plugins/org.eclipse.papyrus.umllight.ui.simplification</module>
 		<module>releng</module>
 	</modules>
 	<properties>
