Fix #8 Sequence Diagram and Palette
Implement palette and modeling assistants for light sequence diagram.
The latter requires additionally installing the popup-bar edit-policy
on the interaction compartment for the Lifeline assistant.

Incidentally fix up the “Comment Link” icon in the palette of all
UML Light diagrams to match the class diagram (instead of showing
a comment node, which is misleading).

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
+++ b/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
@@ -20,5 +20,16 @@
          point="org.eclipse.papyrus.infra.gmfdiag.assistant.modelProviders">
       <modelProvider
             uri="resource/assistant/UMLLightUseCase.assistants"></modelProvider>
+      <modelProvider
+            uri="resource/assistant/UMLLightSequence.assistants"></modelProvider>
+   </extension>
+   <extension
+         point="org.eclipse.gmf.runtime.diagram.ui.editpolicyProviders">
+      <editpolicyProvider
+            class="org.eclipse.papyrus.umllight.core.internal.provider.SequenceEditPolicyProvider">
+         <Priority
+               name="High">
+         </Priority>
+      </editpolicyProvider>
    </extension>
 </plugin>
