Fix #30 Use case shape replication
Update the target platform to take Papyrus nightly build with
fix for use case shape replication in the diagram.

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.source>1.8</java.source>
 		<java.target>1.8</java.target>
-		<target.eclipseversion>photon</target.eclipseversion>
-		<!-- photon | oxygen -->
-		<target.branch>release</target.branch>
+		<!-- r2018-12 | photon | oxygen -->
+		<target.eclipseversion>r2018-12</target.eclipseversion>
 		<!-- release | nightly -->
+		<target.branch>nightly</target.branch>
 		<target.version>0.0.1-SNAPSHOT</target.version>
 	</properties>
 
