Fix #17 New Wizards
implement UML Light variants of
- new model wizard
- initialize diagrams for existing domain model wizard
- new model project wizard

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

# Conflicts:
#	targetplatforms/r2018-12-nightly.target

--- a/plugins/org.eclipse.papyrus.umllight.ui.simplification/plugin.xml
+++ b/plugins/org.eclipse.papyrus.umllight.ui.simplification/plugin.xml
@@ -323,6 +323,14 @@
             activityId="org.eclipse.papyrus.umllight.ui.simplification.Papyrus"
             pattern="org\.eclipse\.papyrus\.uml\.properties\.generation/.*">
       </activityPatternBinding>
+      <activityPatternBinding
+            activityId="org.eclipse.papyrus.umllight.ui.simplification.Papyrus"
+            pattern="org\.eclipse\.papyrus\.uml\.diagram\.wizards/org\.eclipse\.papyrus\.uml\.diagram\.wizards\..*">
+      </activityPatternBinding>
+      <activityPatternBinding
+            activityId="org.eclipse.papyrus.umllight.ui.simplification.Papyrus"
+            pattern="org\.eclipse\.papyrus\.uml\.perspective/org\.eclipse\.papyrus\.uml\.diagram\.wizards\..*">
+      </activityPatternBinding>
       
       <!-- Equinox -->
       <activity
