--- a/plugins/org.eclipse.papyrus.umllight.ui/plugin.xml
+++ b/plugins/org.eclipse.papyrus.umllight.ui/plugin.xml
@@ -7,4 +7,71 @@
             class="org.eclipse.papyrus.umllight.ui.internal.newchild.CreationMenuCleaner$Startup">
       </startup>
    </extension>
+   
+   <extension point="org.eclipse.ui.newWizards">
+	   <wizard
+            category="org.eclipse.papyrus.wizards.category"
+            class="org.eclipse.papyrus.umllight.ui.internal.wizard.NewUMLLightProjectWizard"
+            finalPerspective="org.eclipse.papyrus.infra.core.perspective"         
+            icon="icons/full/obj16/prj_obj.png"
+            id="org.eclipse.papyrus.umllight.ui.wizard.createProject"
+            name="UML Light Project"
+            project="true">
+         <description>
+            Create a new project with a UML Light model.
+         </description>
+   	   </wizard>
+       <wizard
+            category="org.eclipse.papyrus.wizards.category"
+            class="org.eclipse.papyrus.umllight.ui.internal.wizard.InitUMLLightModelWizard"
+            finalPerspective="org.eclipse.papyrus.infra.core.perspective"
+            icon="icons/full/obj16/file_obj.png"
+            id="org.eclipse.papyrus.umllight.ui.wizard.initModel"
+            name="UML Light Model">
+         <description>
+            Create a new UML Light model.
+         </description>
+      </wizard>
+   </extension>
+   
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <commonWizard
+            type="new"
+            wizardId="org.eclipse.papyrus.umllight.ui.wizard.initModel">
+         <enablement>
+            <with
+                  variable="activeWorkbenchWindow.activePerspective">
+               <equals
+                     value="org.eclipse.papyrus.infra.core.perspective">
+               </equals>
+            </with>
+         </enablement>
+      </commonWizard>
+      <commonWizard
+            type="new"
+            wizardId="org.eclipse.papyrus.umllight.ui.wizard.createProject">
+         <enablement>
+            <with
+                  variable="activeWorkbenchWindow.activePerspective">
+               <equals
+                     value="org.eclipse.papyrus.infra.core.perspective">
+               </equals>
+            </with>
+         </enablement>
+      </commonWizard>
+   </extension>
+   
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="org.eclipse.papyrus.infra.core.perspective">
+         <newWizardShortcut
+               id="org.eclipse.papyrus.umllight.ui.wizard.initModel">
+         </newWizardShortcut>
+         <newWizardShortcut
+               id="org.eclipse.papyrus.umllight.ui.wizard.createProject">
+         </newWizardShortcut>
+      </perspectiveExtension>
+   </extension>
 </plugin>
