--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: java
 jdk:
   - oraclejdk8
-script: mvn clean install
+
+install: true
+ 
+script: mvn clean verify
+
 branches:
   only:
     - master
