Fix #25 Open Papyrus perspective by default
Create a feature to deploy the RCP bundle and include
that feature in the product definition.

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -25,7 +25,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 				<module>org.eclipse.papyrus.umllight.rcp</module>
 				<module>org.eclipse.papyrus.umllight.product</module>
 				<module>org.eclipse.papyrus.umllight.feature</module>
-			
+				<module>org.eclipse.papyrus.umllight.rcp.feature</module>
 			</modules>
 		</profile>
 	</profiles>
