Fix #16 Hide tables
Hide the toolbar items for table creation.

Deploy an Equinox transform to remove the New Table menu
action in the model explorer.  This heavyweight approach is
required because activities cannot be used to hide this menu.

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/plugins/org.eclipse.papyrus.umllight.ui.simplification/plugin.xml
+++ b/plugins/org.eclipse.papyrus.umllight.ui.simplification/plugin.xml
@@ -538,6 +538,15 @@
          <hiddenToolBarItem
                id="org.eclipse.papyrus.infra.viewpoints.policy.toolbar.diagrams">
          </hiddenToolBarItem>
+         <hiddenToolBarItem
+               id="org.eclipse.papyrus.infra.nattable.toolbar.createnattable">
+         </hiddenToolBarItem>
+         <hiddenToolBarItem
+               id="org.eclipse.papyrus.infra.viewpoints.policy.toolbar.tables.command">
+         </hiddenToolBarItem>
+         <hiddenToolBarItem
+               id="org.eclipse.papyrus.infra.nattable.createFromCatalog.command">
+         </hiddenToolBarItem>
       </perspectiveExtension>
    </extension>
  
