Fix #6 Prevent state composition
Disable the means of creating regions in states:
- advice to block explicit region creation
- override the custom creation edit-policy for states that
  allows creation of states within states and does not defer
  to the Element Types for creation of the region

As this is the second instance of custom edit-policy provision,
refactor the sequence diagram implementation for reuse.

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
+++ b/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
@@ -31,5 +31,11 @@
                name="High">
          </Priority>
       </editpolicyProvider>
+      <editpolicyProvider
+            class="org.eclipse.papyrus.umllight.core.internal.provider.StateMachineEditPolicyProvider">
+         <Priority
+               name="High">
+         </Priority>
+      </editpolicyProvider>
    </extension>
 </plugin>
