Address review comment

--- a/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
+++ b/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
@@ -39,7 +39,7 @@
       </editpolicyProvider>
    </extension>
     <extension
-         name="UML Subset for UML LIght"
+         name="UML Subset for UML Light"
          point="org.eclipse.papyrus.infra.properties.contexts">
 		<context appliedByDefault="true" contextModel="resource/context/UML-Light.contexts" isCustomizable="true"/>
 	</extension>
