Fix #55 Simple multiplicity editor
Implement the simple multiplicity editor to use in the Properties
view for all kinds of MultiplicityElement in the UML Light context.

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
+++ b/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
@@ -43,4 +43,9 @@
          point="org.eclipse.papyrus.infra.properties.contexts">
 		<context appliedByDefault="true" contextModel="resource/context/UML-Light.contexts" isCustomizable="true"/>
 	</extension>
+   <extension 
+         name="Properties View Environment for UML Light"
+         point="org.eclipse.papyrus.infra.properties.environments">
+      <environment environmentModel="resource/context/Environment.xmi"/>
+   </extension>
 </plugin>
