Fix #67 Filter state machine direct editors
Prefer a simple name direct editor for states and transitions.
Ensure that direct-edit invocation on a transition targets the
name label, not the guard label.
Inject a constraint into the state and transition direct-editor
configuration registrations that restricts their applicability
to non-UIML-Light models only.

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
+++ b/plugins/org.eclipse.papyrus.umllight.core/plugin.xml
@@ -38,6 +38,15 @@
          </Priority>
       </editpolicyProvider>
    </extension>
+   <extension
+         point="org.eclipse.gmf.runtime.diagram.ui.editpartProviders">
+      <editpartProvider
+            class="org.eclipse.papyrus.umllight.core.internal.provider.StateMachineEditPartProvider">
+         <Priority
+               name="High">
+         </Priority>
+      </editpartProvider>
+   </extension>
     <extension
          name="UML Subset for UML Light"
          point="org.eclipse.papyrus.infra.properties.contexts">
