--- a/plugins/org.eclipse.papyrus.umllight.ui.simplification/build.properties
+++ b/plugins/org.eclipse.papyrus.umllight.ui.simplification/build.properties
@@ -2,4 +2,7 @@ source.. = src/
 output.. = target/classes
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               resource/
+
+               resource/
