Fix #77 UML Light logo source
Add a PhotoShop source file for the UML Light logo.
This is exported from Pixelmator Pro, which is the
original source application but not so useful to share
in Git with developers on other platforms.

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/releng/org.eclipse.papyrus.umllight.rcp/build.properties
+++ b/releng/org.eclipse.papyrus.umllight.rcp/build.properties
@@ -1,9 +1,9 @@
 source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
                about.properties,\
                plugin_customization.ini
+bin.excludes = icons/*.psd
 src.includes = icons/
