Fix #81 Icon attribution and branding
Redesign the UML Light logo and derived icons using
an original drawing of a feather.  This does not require
attribution as it is licensed to Eclipse.org and others
in the same fashion as other source code contributions.

Fix other branding issues discovered in testing (such as
missing/incorrect bundle names and vendors, feature icon,
descriptions of content, etc. in the About dialog).

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/plugins/org.eclipse.papyrus.umllight.core/about.properties
+++ b/plugins/org.eclipse.papyrus.umllight.core/about.properties
@@ -4,9 +4,11 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-blurb=Papyrus UML Light\n\
+featureName=Papyrus UML Light
+
+featureText=Papyrus UML Light\n\
 \n\
 Version: {featureVersion}\n\
 \n\
 Copyright (c) 2018, 2019 EclipseSource Services GmbH and others.\n\
-Papyrus Light UML is an integrated, user-consumable environment for editing UML models.
+Papyrus UML Light is an integrated, user-consumable environment for editing UML models.
