--- a/plugins/org.eclipse.papyrus.umllight.core/build.properties
+++ b/plugins/org.eclipse.papyrus.umllight.core/build.properties
@@ -4,5 +4,11 @@ bin.includes = META-INF/,\
                .,\
                resource/,\
                plugin.xml,\
-               icons/
+               icons/,\
+               about.html,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               UMLLight32.png,\
+               OSGI-INF/
 src.includes = resource/
