--- a/plugins/org.eclipse.papyrus.umllight.ui/build.properties
+++ b/plugins/org.eclipse.papyrus.umllight.ui/build.properties
@@ -3,5 +3,8 @@ output.. = target/classes
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               icons/
-bin.excludes = **/*.pxd/**
+               icons/,\
+               about.html,\
+               OSGI-INF/
+bin.excludes = **/*.pxd/**,\
+               **/*.psd
