--- a/releng/org.eclipse.papyrus.umllight.rcp/build.properties
+++ b/releng/org.eclipse.papyrus.umllight.rcp/build.properties
@@ -4,6 +4,9 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                about.properties,\
-               plugin_customization.ini
-bin.excludes = icons/*.psd
+               plugin_customization.ini,\
+               about.html,\
+               OSGI-INF/
+bin.excludes = **/*.pxd/**,\
+               **/*.psd
 src.includes = icons/
