--- a/plugins/org.eclipse.papyrus.umllight.ui.simplification.transforms/build.properties
+++ b/plugins/org.eclipse.papyrus.umllight.ui.simplification.transforms/build.properties
@@ -2,4 +2,6 @@ source.. = src/
 output.. = target/classes
 bin.includes = META-INF/,\
                .,\
-               transforms/
+               transforms/,\
+               about.html,\
+               OSGI-INF/
