--- a/plugins/org.eclipse.papyrus.umllight.ui/plugin.xml
+++ b/plugins/org.eclipse.papyrus.umllight.ui/plugin.xml
@@ -9,10 +9,10 @@
             finalPerspective="org.eclipse.papyrus.infra.core.perspective"         
             icon="icons/full/obj16/prj_obj.png"
             id="org.eclipse.papyrus.umllight.ui.wizard.createProject"
-            name="UML Light Project"
+            name="%wizard.project.name"
             project="true">
          <description>
-            Create a new project with a UML Light model.
+            %wizard.project.description
          </description>
    	   </wizard>
        <wizard
@@ -21,9 +21,9 @@
             finalPerspective="org.eclipse.papyrus.infra.core.perspective"
             icon="icons/full/obj16/file_obj.png"
             id="org.eclipse.papyrus.umllight.ui.wizard.initModel"
-            name="UML Light Model">
+            name="%wizard.model.name">
          <description>
-            Create a new UML Light model.
+            %wizard.model.description
          </description>
       </wizard>
    </extension>
