--- a/releng/org.eclipse.papyrus.umllight.feature/feature.properties
+++ b/releng/org.eclipse.papyrus.umllight.feature/feature.properties
@@ -1,10 +1,10 @@
 # NLS_MESSAGEFORMAT_VAR
 
 # "featureName" property - name of the feature
-featureName= Papayrus UML Light
+featureName=Papyrus UML Light
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse Modeling Project 
+providerName=Eclipse Papyrus Project 
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
