--- a/releng/org.eclipse.papyrus.umllight.rcp/plugin.xml
+++ b/releng/org.eclipse.papyrus.umllight.rcp/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.4"?>
 <plugin>
   <extension id="product" point="org.eclipse.core.runtime.products">
-    <product application="org.eclipse.ui.ide.workbench" name="Papyrus UML Light">
+    <product application="org.eclipse.ui.ide.workbench" name="%product.name">
       <property name="windowImages" value="icons/UMLLight16.png,icons/UMLLight32.png,icons/UMLLight48.png,icons/UMLLight64.png,icons/UMLLight128.png"/>
       <property name="aboutImage" value="icons/UMLLight48.png"/>
       <property name="appName" value="Papyrus UML Light"/>
@@ -30,7 +30,7 @@ Apache Software Foundation http://www.apache.org/"/>
          point="org.eclipse.ui.preferencePages">
 	  <page            
             category="org.eclipse.ui.preferencePages.Workbench"
-            name="Capabilities"
+            name="%page.name"
             id="org.eclipse.sdk.capabilities">
             <class class="org.eclipse.ui.activities.ActivityCategoryPreferencePage">
                 <parameter name="allowAdvanced" value="true"/>
