Fix #56 Elide the state machine region
Hoist the contents of the state machine’s region into the
state machine in the Model Explorer.  Forward selection
of the region edit-part in the diagram to the state machine.

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>

--- a/plugins/org.eclipse.papyrus.umllight.ui/build.properties
+++ b/plugins/org.eclipse.papyrus.umllight.ui/build.properties
@@ -5,6 +5,7 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                about.html,\
-               OSGI-INF/
+               OSGI-INF/,\
+               resources/
 bin.excludes = **/*.pxd/**,\
                **/*.psd
