--- a/releng/org.eclipse.papyrus.umllight.rcp/plugin_customization.ini
+++ b/releng/org.eclipse.papyrus.umllight.rcp/plugin_customization.ini
@@ -27,7 +27,12 @@ org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP=true
 # org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedStakeholder=Information Modeler
 # org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedViewpoint=Information Modeling Viewpoint
 
-
+# Configure collaborative modeling preferences
+org.eclipse.emf.compare.ide.ui/org.eclipse.emf.compare.ide.ui.preference.preMergeOnConflict=true
+org.eclipse.emf.compare.ide.ui/org.eclipse.emf.compare.ide.ui.preference.resolutionScope=WORKSPACE
+org.eclipse.emf.compare.rcp/org.eclipse.emf.compare.preference.conflict.detector=org.eclipse.emf.compare.rcp.fast.conflictDetector
+org.eclipse.egit.ui/enable_logical_model=true
+org.eclipse.egit.core/core_preferredMergeStrategy=model recursive
 
 
 #
